# clean-architecture-todos

./: .env.example  Cargo.toml  README.md  diesel.toml  docker-compose.yaml
migrations/2022-10-29-121202_create_tasks/: up.sql
src/: lib.rs  main.rs
src/domain/: error.rs  mod.rs  repository.rs  task.rs  task_body.rs  task_state.rs
src/infra/: mod.rs  model.rs  repository.rs  schema.rs
src/server/: error.rs  mod.rs  routers.rs
src/usecase/: error.rs  task.rs  task_dto.rs
todos/: Cargo.toml
todos/src/: lib.rs  main.rs
todos/src/domain/: error.rs  mod.rs  repository.rs  task.rs  task_body.rs  task_filter.rs  task_id.rs  task_state.rs
todos/src/infra/: error.rs  model.rs  repository.rs
todos/src/infra/db/: mem_repository.rs  mod.rs
todos/src/infra/server/: handlers.rs  mod.rs
todos/src/interface_adapter/: controller.rs  dto.rs  request.rs  response.rs
todos/src/usecase/: error.rs  mod.rs  task_dto.rs  todos.rs
