[package]
name = "todos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.56"
diesel = { version = "2.0.2", features = ["r2d2", "postgres"] }
mockall = "0.11.3"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1.17.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
